[package]
edition = "2021"
name = "hashes-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.4", default-features = false, features = ["napi4"] }
napi-derive = "2.9.3"
md2 = "0.10.2"
md4 = "0.10.2"
md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.6"
sha3 = "0.10.6"
sm3 = "0.4.1"
belt-hash = "0.1.0"
blake2 = "0.10.6"
blake3 = "1.3.3"
fsb = "0.1.3"
gost94 = "0.10.4"
groestl = "0.10.1"
ripemd = "0.1.3"
shabal = "0.4.1"
streebog = "0.10.2"
tiger = "0.2.1"
whirlpool = "0.10.4"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
